# STORE-IQ

./: .gitignore  README.md  SUBMISSION_INSTRUCTIONS.md
storeiq/: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.yml  event_log.jsonl  generate_event_log.py  pyproject.toml  requirements.txt
storeiq/analytics/: footfall_engine.py  funnel_engine.py  heatmap_engine.py  prediction_engine.py
storeiq/anomaly/: anomaly_engine.py
storeiq/api/: config.py  db.py  event_processor.py  kafka_service.py  live_data.py  main.py  middleware.py  models.py  websocket.py
storeiq/dashboard/: index.html  package.json  tailwind.config.js
storeiq/database/: models.py  seed.py
storeiq/dataset/: README.md
storeiq/detector/: bytetrack_wrapper.py  reid_engine.py  staff_classifier.py  visitor_id.py  yolo_detector.py
storeiq/docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.pipeline  nginx.conf
storeiq/docs/: CHOICES.md  DESIGN.md  README.md  SCORING.md
storeiq/feature_store/: feature_writer.py
storeiq/pipeline/: entry_detector.py  event_generator.py  pos_loader.py  run.sh  run_pipeline.py  session_engine.py  store_layout.json  video_ingestion.py  zone_config.json  zone_mapper.py
storeiq/streaming/: kafka_consumer.py  kafka_producer.py
storeiq/tests/: conftest.py  test_anomaly.py  test_api.py  test_event_generator.py  test_event_processor.py  test_events.py  test_funnel.py  test_integration.py  test_kafka.py  test_pos_loader.py  test_prediction.py  test_staff_classifier.py  test_tracker.py  test_zone_mapper.py
(+22 files in other folders)
